# identiconhs

./: .gitignore  README.md  identicon.cabal  identiconhs.cabal
lib/: Identicon.hs
src/: Identicon.hs  Main.hs
